--- a/src/main/java/com/Erp/qa/Config/config.properties
+++ b/src/main/java/com/Erp/qa/Config/config.properties
@@ -1,7 +1,7 @@
  browser=chrome
  
- username=naveenk
- password=test@123
+ username=sadapatil
+ password=sadapatil
 
 url=https://www.freecrm.com
 
